[workspace]
members = ["geoserde"]

[package]
name = "fgbfile"
version = "0.3.2"
edition = "2021"
description = "create local FlatGeobuf files."
repository = "https://github.com/p4ken/fgbfile"
license = "MIT"
exclude = [".*"]

[dependencies]
flatgeobuf = { version = "4.0.0", default-features = false }
geo-types = { version = "0.7.11", features = ["serde"] }
geoserde = { version = "0.1.1", path = "geoserde" }
serde = "1.0.193"
thiserror = "1.0.50"

[dev-dependencies]
anyhow = "1.0.75"
geo-types = "0.7.11"
serde_derive = "1.0.193"
