[package]
name = "fgbfile"
version = "0.5.0"
edition = "2021"
description = "Create FlatGeobuf files"
repository = "https://github.com/p4ken/fgbfile"
license = "MIT"
exclude = [".*"]

[dependencies]
flatgeobuf = { version = "4.0.0", default-features = false }
geo-types = { version = "0.7.11", features = ["serde"] }
geoserde = "0.4.0"
serde = "1.0.193"
thiserror = "1.0.50"

[dev-dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
geo-types = "0.7.11"
serde_derive = "1.0.193"
