[package]
name = "geoserde"
version = "0.1.2"
edition = "2021"
description = "serializer and deserislizer for geospatial data"
license = "MIT"
exclude = [".*"]

[features]
# fgb = ["dep:flatgeobuf"]
geozero = ["dep:geozero"]
default = ["geozero"]

[dependencies]
geo-types = { version = "0.7.11" }
serde = { version = "1.0.188" }
# flatgeobuf = { version = "4.0.x", optional = true }
geozero = { version = "0.11.0", optional = true }
# geozero = { version = "0.11.0" }

[dev-dependencies]
geo-types = { version = "0.7.11", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
