[package]
name = "geoserde"
version = "0.2.0"
edition = "2021"
description = "serializer and deserislizer for geospatial data"
license = "MIT"
exclude = [".*"]

[features]
geozero = ["dep:geozero"]
default = ["geozero"]

[dependencies]
geo-types = { version = "0.7.11" }
serde = { version = "1.0.188" }
geozero = { version = "0.11.0", optional = true }

[dev-dependencies]
geo-types = { version = "0.7.11", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
